--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -1,6 +1,33 @@
 #content.services-content {
   padding-top: 0;
 
+  section {
+    //text-align: center;
+    //align-items: center;
+    width: 80%;
+    margin: 4rem auto;
+
+    .section-title {
+      text-transform: uppercase;
+      color: $dark-slate-blue;
+      font-family: $font-style-1;
+      font-weight: bold;
+      font-size: 2rem;
+      margin: 0 auto 4rem auto;
+      text-align: center;
+      width: fit-content;
+
+      &::after {
+        content: "";
+        display: block;
+        margin: 0 auto;
+        width: 50%;
+        padding-top: 15px;
+        border-bottom: 1px solid $dark-grey-blue;
+      }
+    }
+  }
+
   .services-section {
     width: 85%;
     padding-top: 4em;
