--- a/styles/default.scss
+++ b/styles/default.scss
@@ -46,6 +46,13 @@ body {
   overflow-x: hidden;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
 .row::after {
   content: "";
   clear: both;
@@ -328,65 +335,7 @@ hr.border {
   margin: 0 auto;
 }
 
-// home
-section {
-  //text-align: center;
-  //align-items: center;
-  width: 80%;
-  margin: 4rem auto;
-
-  .section-title {
-    text-transform: uppercase;
-    color: $dark-slate-blue;
-    font-family: $font-style-1;
-    font-weight: bold;
-    font-size: 2rem;
-    margin: 0 auto 4rem auto;
-    text-align: center;
-    width: fit-content;
-
-    &::after {
-      content: "";
-      display: block;
-      margin: 0 auto;
-      width: 50%;
-      padding-top: 15px;
-      border-bottom: 1px solid $dark-grey-blue;
-    }
-  }
-
-}
-
-.home-gallery-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 30px;
-
-  .home-gallery {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    // width: 100%;
-    // height: 100%;
-    padding-top: 66.6%;
-    // 4:3 = 75%
-    // 3:2 = 66.6%
-    // 16:9 = 56.25%
-    position: relative;
-  }
-
-  a:nth-child(1) {
-    grid-column: 1/span 2;
-    grid-row: 1/span 2;
-    display: inherit;
-  }
-
-  // .home-gallery--span {
-
-  // }
-}
-
+//* .testimoni-section digunakan jg pada pages/about
 .testimoni-section {
   background-repeat: no-repeat;
   background-position: center;
@@ -418,47 +367,16 @@ section {
   }
 }
 
-.black-opacity {
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 2rem 0;
-}
-
+//* .w-80 digunakan juga di pages/about
 .w-80 {
   width: 80%;
   margin: 2rem auto;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.slider-testimoni {
-  display: inline-flex;
-  flex-wrap: wrap;
-
-  >.testimoni {
-    margin-right: 32px;
-  }
-}
-
+//* .testimoni digunakan di pages/about juga
 .testimoni {
-  // width: auto;
-  // max-width: 45%;
   border: solid 2px $white;
   padding: 2.5rem;
-  // display: grid;
 
   .head-testimoni {
     font-family: $font-style-1;
@@ -482,68 +400,6 @@ section {
   }
 }
 
-.box-container {
-
-  .box {
-    background-color: $white-69;
-    text-align: center;
-    // padding: 28px 17px;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-bottom: 10px;
-
-    img {
-      width: auto;
-      max-height: 80px;
-    }
-
-    .box-title {
-      color: $white;
-      font-weight: 600;
-      font-size: 1.5rem;
-      padding: 30% 17px .5em 17px;
-    }
-
-    .box-content {
-      color: $white;
-      font-size: 12px;
-      line-height: 1.36;
-      font-weight: 500;
-      padding: 0 17px 10px 17px;
-    }
-  }
-}
-
-.section-container {
-  background-color: $white-two;
-  padding: 1em 0;
-
-  .home-portfolio {
-    // margin-top: 3em;
-
-    img {
-      width: 100%;
-    }
-
-    .MuiTypography-root.MuiLink-root {
-      color: $dark-slate-blue;
-      font-size: 1rem;
-      margin-top: 3em;
-    }
-  }
-}
-
-.home-carousel-container {
-  width: 100%;
-  max-width: 100vw;
-  overflow: hidden;
-  padding-bottom: 2rem;
-  overflow-x: hidden;
-  //background-color: khaki;
-}
-
 .font-color-primary {
   color: $dark-slate-blue;
 }
@@ -552,6 +408,7 @@ section {
   color: $dark-grey-blue;
 }
 
+//* untuk style Loading
 .vertical--center {
   position: absolute;
   top: 40%;
@@ -559,7 +416,12 @@ section {
   transform: translate(50%, 0%);
 }
 
-// @import 'variables';
+// -----HOME STYLING-----
+
+
+
+// -----End of HOME STYLING-----
+
 @import 'products';
 @import 'detail';
 @import 'about';
