--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
@@ -429,6 +429,10 @@ hr.border {
   right: 50%;
   -webkit-transform: translate(50%, 0%);
           transform: translate(50%, 0%);
+}
+
+#content.home-content {
+  background-color: #EFF1F5;
 }
 
 .product-container {
@@ -1729,6 +1733,14 @@ input[type=text]:focus, input[type=password]:focus {
   -webkit-transition: all .2s;
   transition: all .2s;
   opacity: 1;
+}
+
+.hero-home-container {
+  background-image: url(/images/hero-homepage.png);
+  background-size: cover;
+  padding: 5em 2em;
+  margin-top: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 @media all and (min-width: 300px) and (max-width: 960px) {
