--- a/styles/default.scss
+++ b/styles/default.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+// new Fonts import :
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,600;1,700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-// @import "./variables";
+
 @import 'variables';
 
 * {
@@ -417,7 +419,9 @@ hr.border {
 }
 
 // -----HOME STYLING-----
-
+#content.home-content {
+  background-color: #EFF1F5;
+}
 
 
 // -----End of HOME STYLING-----
@@ -438,4 +442,5 @@ hr.border {
 @import './Accordion/Accordion';
 @import './PageHeader/PageHeader';
 @import './PortfolioModal/PortfolioModal';
+@import './HeroHome/HeroHome';
 @import 'queries';
