[Add] HERO on HOMEPAGE DONE, add Button Comp + SCSS

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,9 @@
-$font-style-1: 'Montserrat', sans-serif;
-$font-style-2: 'Raleway', sans-serif;
-$font-style-3: 'Roboto', sans-serif;
+$font-style-1: 'Montserrat',
+sans-serif;
+$font-style-2: 'Raleway',
+sans-serif;
+$font-style-3: 'Roboto',
+sans-serif;
 $font-medium: 12px;
 
 // colors
@@ -16,5 +19,6 @@ $warm-grey: #828282;
 $greyish-brown: #414141;
 $greyish-brown-two: #494949;
 $greyish-brown-three: #635959;
+$greyish-brown-four: #666666;
 $macaroni-and-cheese: #f2b32b;
 $pinkish-red: #ea2335;
