--- a/styles/HeroHome/_HeroHome.scss
+++ b/styles/HeroHome/_HeroHome.scss
@@ -1,10 +1,91 @@
 .hero-home-container {
+  * {
+    box-sizing: border-box;
+  }
+
+  display: flex;
+  justify-content: flex-end;
   background-image: url(/images/hero-homepage.png);
   background-size: cover;
   // background-position: center;
   // background-repeat: no-repeat;
   // background-attachment: fixed;
-  padding: 5em 2em;
+  padding: 3em 0;
   margin-top: 0;
   font-family: $font-style-1;
+
+  .content-wrapper {
+    width: 90%;
+    padding-right: 3em;
+
+
+    .top-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 8.5em;
+
+      ul.menu-wrapper {
+        list-style: none;
+
+        li {
+          display: inline-block;
+          margin-left: 2em;
+
+          a {
+            color: $dark-slate-blue;
+            font-weight: bold;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+        }
+
+      }
+    }
+
+    .hero-content {
+      max-width: 55%;
+
+      .hero-title {
+        color: $dark-slate-blue;
+        font-weight: 900;
+        font-size: 3rem;
+      }
+
+      .hero-subtitle {
+        color: $greyish-brown-four;
+        font-weight: 600;
+        font-size: 1.2rem;
+        margin-top: 3em;
+        margin-bottom: 6em;
+      }
+
+      p {
+        color: $greyish-brown-four;
+        font-weight: 600;
+        font-size: 1rem;
+        margin-bottom: 1em;
+      }
+
+      .hero-button-wrapper {
+        margin-bottom: 3em;
+
+        .button:nth-child(1) {
+          margin-right: 1em;
+        }
+      }
+
+      a.link-hubungi-kami {
+        color: $dark-grey-blue;
+        font-size: 1rem;
+        font-weight: bold;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
