--- a/styles/default.scss
+++ b/styles/default.scss
@@ -184,6 +184,8 @@ body {
   height: auto;
 }
 
+//* BUTTON STYLING
+// old button
 .btn {
   background: none;
   outline: none;
@@ -212,6 +214,19 @@ body {
   color: $white;
 }
 
+// new button
+.button.MuiButton-root {
+  background-color: $dark-grey-blue;
+  color: white;
+  font-family: $font-style-1;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: none;
+
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
 @mixin btn-can-hover-base($color) {
   border: 1px solid transparent;
   transition: .2s;
@@ -224,11 +239,13 @@ body {
   }
 }
 
-.btn-can-hover-green {
+.btn-can-hover-green,
+.btn-can-hover-green.MuiButton-root {
   @include btn-can-hover-base($dark-grey-blue)
 }
 
-.btn-can-hover-blue {
+.btn-can-hover-blue,
+.btn-can-hover-blue.MuiButton-root {
   @include btn-can-hover-base($dark-slate-blue)
 }
 
