--- a/styles/default.scss
+++ b/styles/default.scss
@@ -372,7 +372,41 @@ hr.border {
 
 // -----HOME STYLING-----
 #content.home-content {
-  background-color: #EFF1F5;
+  * {
+    box-sizing: border-box;
+  }
+
+  .content {
+    background-color: #EFF1F5;
+    margin-bottom: -60px;
+    padding-top: 3em;
+    padding-bottom: 4em;
+
+    .co-bussiness-container {
+      background-color: white;
+      width: 80%;
+      padding: 2em 1em;
+      margin: 2.5em auto 5.5em;
+      border-radius: 19px;
+
+      .co-bussiness-item {
+        img {
+          width: 100%
+        }
+      }
+    }
+
+    .block-show {
+      background-color: white;
+      border-radius: 12px;
+      width: 100%;
+      height: 512px;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 
