--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -126,43 +126,6 @@
     }
   }
 
-  section {
-    width: 90%;
-
-    .section-title {
-      font-size: 1.8rem;
-      margin-bottom: 2.5rem;
-
-      &::after {
-        padding-top: 10px;
-      }
-    }
-
-    .home-gallery-container {
-      grid-gap: 20px;
-
-      a:nth-child(1) {
-        grid-column: 1/span 12;
-      }
-
-      a:nth-child(2) {
-        grid-column: 1/span 12;
-      }
-
-      a:nth-child(3) {
-        grid-column: 1/span 12;
-      }
-
-      a:nth-child(4) {
-        grid-column: 1/span 12;
-      }
-
-      a:nth-child(5) {
-        grid-column: 1/span 12;
-      }
-    }
-  }
-
   .xs-w-90 {
     width: 90%;
   }
@@ -239,6 +202,8 @@
 }
 
 @media all and (max-width: 480px) {
+
+  // For services page
   #content.services-content {
     .services-section {
       width: 90%;
