--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@ $dark-slate-blue: #3e61dc;
 $dark-grey-blue: #45C875;
 $black: #353535;
 $black-two: #292929;
+$black-three: #110A04;
 $black-25: rgba(0, 0, 0, 0.25);
 $white: #ffffff;
 $white-two: #efefef;
