--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -30,6 +30,17 @@
   .hamburger {
     display: block;
   }
+
+  // For home page
+  #content.home-content {
+    .content {
+      .numbers-section {
+        img {
+          width: 90%;
+        }
+      }
+    }
+  }
 }
 
 @media all and (min-width: 300px) and (max-width: 768px) {
@@ -195,6 +206,17 @@
             margin-right: 0;
             margin-bottom: 1em;
           }
+        }
+      }
+    }
+  }
+
+  #content.home-content {
+    .content {
+      .numbers-section {
+        img {
+          // bottom: 30%;
+          width: 100%;
         }
       }
     }
