--- a/styles/default.css
+++ b/styles/default.css
@@ -517,6 +517,7 @@ hr.border {
 
 #content.home-content .content .numbers-section {
   position: relative;
+  padding-top: 4.8em;
 }
 
 #content.home-content .content .numbers-section img {
@@ -528,7 +529,6 @@ hr.border {
 
 #content.home-content .content .numbers-section .loakarya-in-numbers {
   position: relative;
-  margin-top: 4.8em;
 }
 
 #content.home-content .content .numbers-section .loakarya-in-numbers h2 {
@@ -1968,6 +1968,9 @@ input[type=text]:focus, input[type=password]:focus {
   .hamburger {
     display: block;
   }
+  #content.home-content .content .numbers-section img {
+    width: 90%;
+  }
 }
 
 @media all and (min-width: 300px) and (max-width: 768px) {
@@ -2094,6 +2097,9 @@ input[type=text]:focus, input[type=password]:focus {
   .hero-home-container .content-wrapper .hero-content .hero-button-wrapper a {
     margin-right: 0;
     margin-bottom: 1em;
+  }
+  #content.home-content .content .numbers-section img {
+    width: 100%;
   }
 }
 
