--- a/styles/default.scss
+++ b/styles/default.scss
@@ -457,6 +457,12 @@ hr.border {
 
     .numbers-section {
       position: relative;
+      padding-top: 4.8em;
+      // background-image: url(/images/peta-indonesia-high-vector.png);
+      // background-size: contain;
+      // background-position: right;
+      // background-repeat: no-repeat;
+      // background-attachment: fixed;
 
       img {
         position: absolute;
@@ -467,7 +473,6 @@ hr.border {
 
       .loakarya-in-numbers {
         position: relative; // untuk mensejajarkan dgn img
-        margin-top: 4.8em;
 
         h2 {
           width: 270px;
