--- a/styles/HeroHome/_HeroHome.scss
+++ b/styles/HeroHome/_HeroHome.scss
@@ -5,7 +5,7 @@
 
   display: flex;
   justify-content: flex-end;
-  background-image: url(/images/hero-homepage.png);
+  background-image: url(/images/home-assets/hero-homepage.png);
   background-size: cover;
   // background-position: center;
   // background-repeat: no-repeat;
