--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -39,6 +39,12 @@
           width: 90%;
         }
       }
+
+      .why-content-section {
+        >img {
+          width: 90%;
+        }
+      }
     }
   }
 }
@@ -219,6 +225,13 @@
           width: 100%;
         }
       }
+
+      .why-content-section {
+        >img {
+          // bottom: 30%;
+          width: 100%;
+        }
+      }
     }
   }
 }
@@ -253,6 +266,14 @@
           }
 
           >p {
+            width: auto;
+          }
+        }
+      }
+
+      .why-content-section {
+        .why-content {
+          p {
             width: auto;
           }
         }
