--- a/styles/default.css
+++ b/styles/default.css
@@ -597,9 +597,13 @@ hr.border {
   border-left: 2px solid #45C875;
 }
 
-#content.home-content .content .testimoni-section {
+#content.home-content .content .testimoni-slider-section {
   margin-top: 8.5rem;
   text-align: center;
+}
+
+#content.home-content .content .testimoni-slider-section h2 {
+  margin-bottom: 2.58em;
 }
 
 .product-container {
@@ -1998,6 +2002,70 @@ input[type=text]:focus, input[type=password]:focus {
 
 .hero-home-container .content-wrapper .hero-content a.link-hubungi-kami:hover {
   text-decoration: none;
+}
+
+.testimoni-slider-container {
+  color: #666666;
+}
+
+.testimoni-slider-container .swiper-container {
+  overflow: visible !important;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide {
+  margin-left: 1.6rem;
+  margin-right: 1.6rem;
+  overflow: visible;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item {
+  width: 338px;
+  background-color: white;
+  border-radius: 9px;
+  -webkit-box-shadow: -2px -2px 22px rgba(0, 0, 0, 0.16);
+          box-shadow: -2px -2px 22px rgba(0, 0, 0, 0.16);
+  position: relative;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .customer-avatar {
+  width: 92px;
+  height: 92px;
+  border-radius: 100%;
+  border: 1px solid #707070;
+  overflow: hidden;
+  margin: auto;
+  position: absolute;
+  top: -46px;
+  right: 0;
+  left: 0;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .customer-avatar > img {
+  width: 100%;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .testimoni-content {
+  width: 78%;
+  margin: auto;
+  padding-top: 5.8em;
+  padding-bottom: 2.5em;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .testimoni-content p.the-quote {
+  color: #3e61dc;
+  font-size: 4.5rem;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .testimoni-content .customer-identity {
+  margin-top: 9.4em;
+}
+
+.testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item .testimoni-content .customer-identity p.customer-name {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: .3rem;
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
