[Fix] fix testimoni slider pagination on home

--- a/styles/TestimoniSlider/_TestimoniSlider.scss
+++ b/styles/TestimoniSlider/_TestimoniSlider.scss
@@ -8,6 +8,7 @@
       margin-left: 1.6rem;
       margin-right: 1.6rem;
       overflow: visible;
+      margin-bottom: 5.8em;
 
       .testimoni-slider-item {
         width: 338px;
