--- a/styles/default.scss
+++ b/styles/default.scss
@@ -549,12 +549,15 @@ hr.border {
 
     .testimoni-slider-section {
       margin-top: 8.5rem;
+      margin-bottom: 4rem;
       text-align: center;
 
       h2 {
         margin-bottom: 2.58em;
       }
     }
+
+    .article-list-section {}
   }
 }
 
