--- a/styles/default.css
+++ b/styles/default.css
@@ -599,6 +599,7 @@ hr.border {
 
 #content.home-content .content .testimoni-slider-section {
   margin-top: 8.5rem;
+  margin-bottom: 4rem;
   text-align: center;
 }
 
@@ -2016,6 +2017,7 @@ input[type=text]:focus, input[type=password]:focus {
   margin-left: 1.6rem;
   margin-right: 1.6rem;
   overflow: visible;
+  margin-bottom: 5.8em;
 }
 
 .testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item {
