--- a/styles/default.css
+++ b/styles/default.css
@@ -2014,14 +2014,11 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 .testimoni-slider-container .swiper-container .swiper-slide {
-  margin-left: 1.6rem;
-  margin-right: 1.6rem;
-  overflow: visible;
   margin-bottom: 5.8em;
+  width: 338px !important;
 }
 
 .testimoni-slider-container .swiper-container .swiper-slide .testimoni-slider-item {
-  width: 338px;
   background-color: white;
   border-radius: 9px;
   -webkit-box-shadow: -2px -2px 22px rgba(0, 0, 0, 0.16);
