[Add] Articles on Home Page

--- a/styles/default.css
+++ b/styles/default.css
@@ -549,7 +549,7 @@ hr.border {
   color: #3e61dc;
   font-size: 2.6rem;
   font-weight: bold;
-  margin-left: -11px;
+  margin-left: -13px;
   padding-left: 11px;
   border-left: 2px solid #45C875;
 }
@@ -605,6 +605,48 @@ hr.border {
 
 #content.home-content .content .testimoni-slider-section h2 {
   margin-bottom: 2.58em;
+}
+
+#content.home-content .content .article-list-section {
+  background-color: white;
+  padding-top: 4.5rem;
+  padding-bottom: 1.25rem;
+  margin-bottom: 9.2rem;
+}
+
+#content.home-content .content .article-list-section h2 {
+  margin-bottom: 4.5rem;
+}
+
+#content.home-content .content .article-list-section .see-more-articles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 4em;
+  cursor: pointer;
+  color: #3e61dc;
+  text-decoration: none;
+}
+
+#content.home-content .content .article-list-section .see-more-articles .see-more-articles-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 0.5px solid transparent;
+}
+
+#content.home-content .content .article-list-section .see-more-articles .see-more-articles-link span {
+  margin-right: 2px;
+}
+
+#content.home-content .content .article-list-section .see-more-articles .see-more-articles-link:hover {
+  border-bottom: 1px solid #3e61dc;
 }
 
 .product-container {
@@ -2073,6 +2115,40 @@ input[type=text]:focus, input[type=password]:focus {
   font-size: 1.3rem;
   font-weight: bold;
   margin-bottom: .3rem;
+}
+
+.article-list-container .article-list-item img.article-image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.article-list-container .article-list-item .article-content {
+  color: #666666;
+  padding-top: 0.75em;
+}
+
+.article-list-container .article-list-item .article-content span.category {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.article-list-container .article-list-item .article-content .article-title {
+  color: #110A04;
+  font-size: 1.3rem;
+  margin-top: 0.75rem;
+  margin-bottom: 1rem;
+  margin-left: -13px;
+  padding-left: 11px;
+  border-left: 2px solid #45C875;
+}
+
+.article-list-container .article-list-item .article-content .article-text {
+  line-height: 1.5;
+  margin-bottom: 1em;
+}
+
+.article-list-container .article-list-item .article-content .writer-and-time span {
+  font-weight: bold;
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
