--- a/styles/default.scss
+++ b/styles/default.scss
@@ -593,6 +593,14 @@ hr.border {
         }
       }
     }
+
+    .blue-border-home {
+      background-color: $dark-slate-blue;
+      width: 65%;
+      height: 3px;
+      margin: auto;
+      margin-bottom: 7.625rem;
+    }
   }
 }
 
