--- a/styles/ArticleList/_ArticleList.scss
+++ b/styles/ArticleList/_ArticleList.scss
@@ -2,9 +2,23 @@
 
   .article-list-item {
 
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:hover .article-title {
+      text-decoration: underline;
+    }
+
+    &:hover img.article-image {
+      filter: opacity(.8);
+    }
+
     img.article-image {
       width: 100%;
       border-radius: 9px;
+
+      transition: all .2s;
     }
 
     .article-content {
@@ -22,12 +36,27 @@
         margin-top: 0.75rem;
         margin-bottom: 1rem;
 
-        @include left-green-border()
+        @include left-green-border();
       }
 
       .article-text {
-        line-height: 1.5;
+        $font-size: 1rem;
+        $line-height: 1.5;
+        $lines-to-show: 3;
         margin-bottom: 1em;
+
+        /* Fallback for non-webkit */
+        display: block;
+        display: -webkit-box;
+        /* Fallback for non-webkit */
+        height: $font-size*$line-height*$lines-to-show;
+
+        font-size: $font-size;
+        line-height: $line-height;
+        -webkit-line-clamp: $lines-to-show;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .writer-and-time {
